# tradingview

./: .gitignore  Dockerfile  Dockerfile.airflow  README.md  docker-compose.yml  env.example  requirements-airflow.txt  requirements-dev.txt  requirements.txt
airflow/: Dockerfile  requirements.txt
backend/: Dockerfile  migrate_data.py  pyproject.toml  requirements.txt
backend/dags/: README.md  extract_historical_data_dag.py  extract_market_data_dag.py  transform_market_data_dag.py  update_moving_averages_dag.py
backend/tradingview/: __init__.py
backend/tradingview/common/: logger_config.py  settings.py  tickers.txt  utilfunctions.py  validation.py
backend/tradingview/ingestion/: database.py  extract.py  ingest.py  models.py
backend/tradingview/transform/: markov_chain.py  moving_averages.py  transformer.py
dags/: extract_historical_data_dag.py  extract_market_data_dag.py  transform_market_data_dag.py
frontend/: Dockerfile  db_check.py  moving_averages_demo.py  requirements.txt  streamlit_app.py
ingestion/: ingest.py
ingestion_pipeline/: database_manager.py  extract.py  insert.py  logger_config.py  models.py
sql/: init.sql
src/common/: logger_config.py  settings.py  utilfunctions.py  validation.py
src/ingestion/: database.py  extract.py  ingest.py  models.py
src/transform/: transformer.py
