[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingview"
version = "0.1.0"
description = "Shared trading backend code"
requires-python = ">=3.11"
dependencies = [
  "psycopg2-binary==2.9.9",
  "pandas==2.1.4",
  "python-dotenv==1.0.0",
  "requests==2.31.0",
  "SQLAlchemy==1.4.49",
  "yfinance==0.2.37",
  "numpy==1.26.4",
  "scikit-learn==1.3.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tradingview*"]

[tool.setuptools.package-data]
"tradingview.common" = ["tickers.txt"]


